# reconcile-mcp

./: .gitignore  README.md  pyproject.toml  server.json
.github/workflows/: ci.yml  codeql.yml  mcp-inspect.yml  publish-mcp.yml  release.yml
examples/: mcp_tools.py
reconcile_mcp/: __init__.py  adapters.py  engine.py  sandbox.py  server.py
tests/: test_adapters.py  test_engine.py  test_sandbox.py  test_server.py
